--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "formidable": "^2.1.1",
     "http-errors": "~1.6.3",
     "jest": "^29.3.1",
+    "miyaguchipreneel": "^1.0.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "node-aes-cmac": "^0.1.1",
     "node-notifier": "^10.0.1",
     "nodemon": "^2.0.20",
     "os": "^0.1.2",
     "pug": "^3.0.2",
-    "request-promise": "^4.2.6",
+    "request-promise": "^0.0.1",
+    "she_decrypt": "^1.0.2",
     "sqlite3": "^5.1.2",
     "stylus": "0.54.5",
     "xml2js": "^0.4.23"
