--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "debug": "DEBUG='express:*,Extract_MAC_Prov_Frames:*' && nodemon --trace-warnings --inspect ./bin/www",
+    "debug": "DEBUG='express:*,Extract_MAC_Prov_Frames:*' && nodemon --trace-warnings --inspect-brk --trace-uncaught ./bin/www",
     "test": "jest"
   },
   "dependencies": {
@@ -29,7 +29,7 @@
     "pug": "^3.0.2",
     "request-promise": "^0.0.1",
     "she_decrypt": "^1.2.0",
-    "she_encrypt": "^1.0.2",
+    "she_encrypt": "^1.0.3",
     "sqlite3": "^5.1.2",
     "stylus": "0.54.5",
     "xml2js": "^0.4.23"
