--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "child_process": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "event-stream": "^4.0.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "formidable": "^2.1.1",
