--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mac-prov-extract",
-  "version": "0.0.9",
+  "name": "macextractor-nostream",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
@@ -19,7 +19,7 @@
     "formidable": "^2.1.1",
     "http-errors": "~1.6.3",
     "jest": "^29.3.1",
-    "miyaguchipreneel": "^1.0.1",
+    "miyaguchipreneel": "^1.1.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-aes-cmac": "^0.1.1",
@@ -28,8 +28,8 @@
     "os": "^0.1.2",
     "pug": "^3.0.2",
     "request-promise": "^0.0.1",
-    "she_decrypt": "^1.2.0",
-    "she_encrypt": "^1.1.1",
+    "she_decrypt": "^1.2.3",
+    "mac_encrypt": "^1.1.1",
     "sqlite3": "^5.1.2",
     "stylus": "0.54.5",
     "xml2js": "^0.4.23"
